[gd_scene load_steps=6 format=3]

[ext_resource type="Script" path="res://Scripts/Player/Mario.gd" id="1_crs4k"]
[ext_resource type="SpriteFrames" path="res://SpriteFrames/Mario_Small_SpriteFrames.tres" id="2_p7nxx"]
[ext_resource type="PackedScene" path="res://Prefabs/Component/DownwardHitscan.tscn" id="4_pwquy"]
[ext_resource type="PackedScene" path="res://Prefabs/Items/ItemCollector.tscn" id="5_hjvx0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hxvqm"]
size = Vector2(5, 10)

[node name="prefab_small-mario" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_crs4k")

[node name="Collision2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -5)
shape = SubResource("RectangleShape2D_hxvqm")

[node name="States" type="Node2D" parent="."]

[node name="Small_Mario" type="AnimatedSprite2D" parent="States"]
texture_filter = 1
sprite_frames = ExtResource("2_p7nxx")
animation = &"default_idle"
offset = Vector2(0, -6.5)

[node name="PowerupCollector" parent="." instance=ExtResource("5_hjvx0")]

[node name="DownwardHitscan" parent="." instance=ExtResource("4_pwquy")]
position = Vector2(0, -0.5)

[node name="Properties" type="Node" parent="."]

[node name="CanBreak" type="Node" parent="Properties"]

[node name="IsPlayer" type="Node" parent="Properties"]

[node name="Timer" type="Node" parent="."]

[node name="Jump" type="Timer" parent="Timer"]
wait_time = 0.2

[connection signal="timeout" from="Timer/Jump" to="." method="_on_jumpduration_timeout"]
